# strava2gpx

./: .gitignore  LICENSE  README.md  build.gpx  pyproject.toml  setup.py  strava.py  test.json  test1.json
src/: __init__.py  strava2gpx.py
strava2gpx/: __init__.py  strava2gpx.py
tests/: test_strava2gpx.py
